--- a/.gitignore
+++ b/.gitignore
@@ -51,8 +51,9 @@ Module.symvers
 Mkfile.old
 dkms.conf
 
-# WallMon artifact
+# WallMon artifacts
 wallmon
+wallmon_test
 
 # Test server's files
 server/node_modules/
