--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,7 +2,7 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "GDB: Build and Debug",
+      "name": "GDB: Wallmon",
       "type": "cppdbg",
       "request": "launch",
       "program": "${workspaceFolder}/wallmon",
@@ -20,7 +20,33 @@
           "ignoreFailures": true
         }
       ],
-      "preLaunchTask": "build",
+      "preLaunchTask": "build-wallmon",
+      "internalConsoleOptions": "openOnSessionStart",
+      "logging": {
+        "moduleLoad": false,
+        "trace": false
+      }
+    },
+    {
+      "name": "GDB: Tests",
+      "type": "cppdbg",
+      "request": "launch",
+      "program": "${workspaceFolder}/wallmon_test",
+      "args": [],
+      "stopAtEntry": false,
+      "cwd": "${workspaceFolder}",
+      "environment": [],
+      "externalConsole": false,
+      "MIMode": "gdb",
+      "miDebuggerPath": "/usr/bin/gdb",
+      "setupCommands": [
+        {
+          "description": "Enable pretty-printing for gdb",
+          "text": "-enable-pretty-printing",
+          "ignoreFailures": true
+        }
+      ],
+      "preLaunchTask": "build-tests",
       "internalConsoleOptions": "openOnSessionStart",
       "logging": {
         "moduleLoad": false,
