--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -15,10 +15,10 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Install dependencies
-      run: sudo apt-get update && sudo apt-get install -y build-essential libcunit1-dev
+      run: sudo apt-get update && sudo apt-get install -y build-essential libcunit1-dev valgrind
 
     - name: Build
       run: make test
 
     - name: Run tests
-      run: ./wallmon_test
+      run: valgrind --leak-check=full --error-exitcode=1 ./wallmon_test
