Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,8 +10,8 @@ main_prepare:
   tags:
     - FreeBSD
   script:
-    - pkg install -y cunit
-    - pkg install -y valgrind
+    - pkg info | grep cunit
+    - pkg infi | grep valgrind
 
 main_build:
     only:
