--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,14 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+pcap = "2.2.0"
+chrono = {version = "0.4.39", features = ["clock"]}
+tonic = { version = "0.12.3", features = ["tls", "tls-roots"] }
+prost = "0.13.4"
+tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
+uuid = { version = "1.12.0", features = ["v4"] }
+once_cell = "1.20.2"
+clap = { version = "4.5.26", features = ["derive"] }
+
+[build-dependencies]
+tonic-build = "0.12.3"
