--- a/wallguard-server/Cargo.toml
+++ b/wallguard-server/Cargo.toml
@@ -2,6 +2,21 @@
 name = "wallguard-server"
 version = "0.1.0"
 edition = "2021"
+#authors = []
+description = "A centralized management system for network firewalls"
+readme = "README.md"
+#homepage = ""
+repository = "https://github.com/NullNet-ai/wallguard-server"
+#documentation = ""
+license = "MIT"
+keywords = ["firewall", "network", "manager", "centralized", "monitor"]
+categories = ["network-programming"]
+#include = []
+
+[profile.release]
+opt-level = 3
+lto = true
+strip = true
 
 [dependencies]
 tonic = { version = "0.12.3", features = ["tls", "tls-roots"] }
@@ -10,3 +25,6 @@ tokio = { version = "1.42.0", features = ["rt-multi-thread"] }
 
 [build-dependencies]
 tonic-build = "0.12.3"
+
+[badges]
+maintenance = { status = "actively-developed" }
