--- a/wallguard-server/Cargo.toml
+++ b/wallguard-server/Cargo.toml
@@ -30,6 +30,7 @@ async-channel = "2.3.1"
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.137"
 base64 = "0.22.1"
+once_cell = "1.20.2"
 
 [build-dependencies]
 tonic-build = "0.12.3"
