--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,12 +5,8 @@ edition = "2021"
 
 [dependencies]
 traffic_monitor = { path = "../libguard/client_libraries/traffic_monitor" }
-tonic = { version = "0.12.3", features = ["tls", "tls-roots"] }
-prost = "0.13.4"
+wallguard-server = { path = "../wallguard-server" }
 tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
 uuid = { version = "1.12.0", features = ["v4"] }
 once_cell = "1.20.2"
 clap = { version = "4.5.26", features = ["derive"] }
-
-[build-dependencies]
-tonic-build = "0.12.3"
