--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ uuid = { version = "1.12.0", features = ["v4"] }
 once_cell = "1.20.2"
 clap = { version = "4.5.26", features = ["derive"] }
 bincode = "1.3.3"
+sysinfo = { version = "0.33.1", default-features = false, features = ["disk"] }
