--- a/wallguard-server/Cargo.toml
+++ b/wallguard-server/Cargo.toml
@@ -31,6 +31,7 @@ serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.137"
 once_cell = "1.20.2"
 libdatastore = {path = "../libguard/server_libraries/libdatastore" }
+libtoken = {path = "../libguard/server_libraries/libtoken" }
 
 [build-dependencies]
 tonic-build = "0.12.3"
