--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ strip = true
 traffic_monitor = { path = "../libguard/client_libraries/traffic_monitor" }
 libconfmon = { path = "../libguard/client_libraries/libconfmon" }
 wallguard-server = { path = "../wallguard-server" }
+libtoken = { path = "../libguard/server_libraries/libtoken" }
 chrono = { version = "0.4.39", features = ["clock"] }
 tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
 uuid = { version = "1.12.0", features = ["v4"] }
