--- a/wallguard-server/Cargo.toml
+++ b/wallguard-server/Cargo.toml
@@ -32,6 +32,7 @@ serde_json = "1.0.137"
 once_cell = "1.20.2"
 libdatastore = {path = "../libguard/server_libraries/libdatastore" }
 libtoken = {path = "../libguard/server_libraries/libtoken" }
+chrono = "0.4.39"
 
 [build-dependencies]
 tonic-build = "0.12.3"
