--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,10 +12,10 @@ lto = true
 strip = true
 
 [dependencies]
-traffic_monitor = { path = "../libguard/client_libraries/traffic_monitor" }
-libconfmon = { path = "../libguard/client_libraries/libconfmon" }
+nullnet-traffic-monitor = "0.1.0"
+nullnet-libconfmon = "0.1.1"
 wallguard-server = { path = "../wallguard-server" }
-libtoken = { path = "../libguard/server_libraries/libtoken" }
+nullnet-libtoken = "0.1.0"
 chrono = { version = "0.4.39", features = ["clock"] }
 tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
 uuid = { version = "1.12.0", features = ["v4"] }
