--- a/wallguard-server/.gitlab-ci.yml
+++ b/wallguard-server/.gitlab-ci.yml
@@ -38,5 +38,6 @@ test:
 push-image:
   stage: deploy
   script:
-    - docker compose build
-    - docker compose push
+    - export IMAGE_NAME=registry.dnamicro.com/wallguard-server:$CI_COMMIT_REF_NAME-$CI_PIPELINE_ID
+    - docker build -t $IMAGE_NAME .
+    - docker push $IMAGE_NAME
