--- a/wallguard-server/Dockerfile
+++ b/wallguard-server/Dockerfile
@@ -1,15 +1,28 @@
-FROM rust
+FROM rust:latest AS builder
 
 WORKDIR /wallguard-server
 
-COPY . /wallguard-server
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends cmake protobuf-compiler && \
+    apt-get clean && \ 
+    rm -rf /var/lib/apt/lists/*
 
-EXPOSE 50051
+COPY Cargo.toml Cargo.lock ./
 
-RUN apt-get clean
-RUN apt-get update
-RUN apt-get install -y cmake
+COPY . .
 
 RUN cargo build --release
 
-CMD ["./target/release/wallguard-server"]
+FROM debian:bookworm-slim
+
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends libgcc-s1 libstdc++6 ca-certificates && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
+
+WORKDIR /app
+COPY --from=builder /wallguard-server/target/release/wallguard-server .
+COPY --from=builder /wallguard-server/tls ./tls/
+
+EXPOSE 50051
+CMD ["./wallguard-server"]
