--- a/wallguard-server/.gitlab-ci.yml
+++ b/wallguard-server/.gitlab-ci.yml
@@ -35,9 +35,9 @@ test:
     - cargo test -- --nocapture
   timeout: 10 minutes
 
-push-image:
-  stage: deploy
-  script:
-    - export IMAGE_NAME=registry.dnamicro.com/wallguard-server:$CI_COMMIT_REF_NAME-$CI_PIPELINE_ID
-    - docker build -t $IMAGE_NAME .
-    - docker push $IMAGE_NAME
+# push-image:
+#   stage: deploy
+#   script:
+#     - export IMAGE_NAME=registry.dnamicro.com/wallguard-server:$CI_COMMIT_REF_NAME-$CI_PIPELINE_ID
+#     - docker build -t $IMAGE_NAME .
+#     - docker push $IMAGE_NAME
