--- a/wallguard-server/Cargo.toml
+++ b/wallguard-server/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "wallguard-server"
+name = "nullnet-wallguard-server"
 version = "0.1.0"
 edition = "2021"
-#authors = []
+authors = ["Giuliano Bellini <gyulyvgc89@gmail.com>", "Anton Liashkevich <anton.liashkevich.eng@gmail.com>"]
 description = "A centralized management system for network firewalls"
 readme = "README.md"
 #homepage = ""
@@ -13,6 +13,15 @@ keywords = ["firewall", "network", "manager", "centralized", "monitor"]
 categories = ["network-programming"]
 #include = []
 
+[lib]
+name = "libwallguard"
+path = "src/lib.rs"
+
+[[bin]]
+name = "wallguard-server"
+path = "src/main.rs"
+publish = false
+
 [features]
 no-datastore = []
 
@@ -22,6 +31,8 @@ lto = true
 strip = true
 
 [dependencies]
+nullnet-libdatastore = "0.1.0"
+nullnet-libtoken = "0.1.0"
 etherparse = "0.17.0"
 tonic = { version = "0.12.3", features = ["tls", "tls-roots"] }
 prost = "0.13.4"
@@ -30,8 +41,6 @@ async-channel = "2.3.1"
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.137"
 once_cell = "1.20.2"
-nullnet-libdatastore = "0.1.0"
-nullnet-libtoken = "0.1.0"
 chrono = "0.4.39"
 
 [build-dependencies]
