--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,6 @@ strip = true
 [dependencies]
 nullnet-traffic-monitor = "0.1.0"
 nullnet-libconfmon = "0.1.1"
-wallguard-server = { path = "../wallguard-server" }
 nullnet-libtoken = "0.1.0"
 chrono = { version = "0.4.39", features = ["clock"] }
 tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
@@ -23,3 +22,4 @@ once_cell = "1.20.2"
 clap = { version = "4.5.26", features = ["derive"] }
 bincode = "1.3.3"
 sysinfo = { version = "0.33.1", default-features = false, features = ["disk"] }
+nullnet-wallguard-server = "0.1.0"
