--- a/wallguard-server/Cargo.toml
+++ b/wallguard-server/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "nullnet-wallguard-server"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 authors = ["Giuliano Bellini <gyulyvgc89@gmail.com>", "Anton Liashkevich <anton.liashkevich.eng@gmail.com>"]
 description = "A centralized management system for network firewalls"
@@ -41,6 +41,8 @@ serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.137"
 once_cell = "1.20.2"
 chrono = "0.4.39"
+nullnet-libfireparse = "0.1.0"
+md5 = "0.7.0"
 
 [build-dependencies]
 tonic-build = "0.12.3"
