--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,5 @@ once_cell = "1.20.2"
 clap = { version = "4.5.26", features = ["derive"] }
 bincode = "1.3.3"
 sysinfo = { version = "0.33.1", default-features = false, features = ["disk"] }
+syslog = "7.0.0"
+log = "0.4.25"
