--- a/wallguard-server/Cargo.toml
+++ b/wallguard-server/Cargo.toml
@@ -40,6 +40,7 @@ once_cell = "1.20.2"
 chrono = "0.4.39"
 nullnet-libfireparse = "0.1.5"
 md5 = "0.7.0"
+futures = "0.3.31"
 
 [build-dependencies]
 tonic-build = "0.12.3"
