--- a/wallguard-server/Cargo.toml
+++ b/wallguard-server/Cargo.toml
@@ -27,8 +27,9 @@ lto = true
 strip = true
 
 [dependencies]
-nullnet-libdatastore = "0.1.3"
+nullnet-libdatastore = "0.2.0"
 nullnet-libtoken = "0.1.0"
+nullnet-libfireparse = "0.2.3"
 etherparse = "0.17.0"
 tonic = { version = "0.12.3", features = ["tls", "tls-roots"] }
 prost = "0.13.4"
@@ -38,11 +39,11 @@ serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.137"
 once_cell = "1.20.2"
 chrono = "0.4.39"
-nullnet-libfireparse = "0.2.3"
 md5 = "0.7.0"
 futures = "0.3.31"
 axum = "0.8.1"
 if-addrs = "0.13.3"
+nullnet-liberror = "0.1.0"
 
 [build-dependencies]
 tonic-build = "0.12.3"
