--- a/wallguard-server/Cargo.toml
+++ b/wallguard-server/Cargo.toml
@@ -44,6 +44,7 @@ futures = "0.3.31"
 axum = "0.8.1"
 if-addrs = "0.13.3"
 nullnet-liberror = "0.1.0"
+nullnet-liblogging = "0.1.2"
 
 [build-dependencies]
 tonic-build = "0.12.3"
