--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ lto = true
 strip = true
 
 [dependencies]
-nullnet-traffic-monitor = "=0.1.2"
+nullnet-traffic-monitor = { version = "0.1.3", features = ["export-pcap"] }
 nullnet-libconfmon = "=0.2.5"
 nullnet-libtoken = "=0.1.0"
 nullnet-wallguard-server = "=0.2.0"
