--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,9 @@ strip = true
 [dependencies]
 nullnet-traffic-monitor = { version = "0.1.3", features = ["export-pcap"] }
 nullnet-libconfmon = "=0.2.5"
-nullnet-libtoken = "=0.1.0"
-nullnet-wallguard-server = "=0.2.0"
+nullnet-libtoken = "=0.1.1"
+nullnet-wallguard-server = "=0.2.3"
+nullnet-liblogging = "0.2.0"
 chrono = { version = "0.4.39", features = ["clock"] }
 tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
 uuid = { version = "1.12.0", features = ["v4"] }
@@ -23,5 +24,4 @@ once_cell = "1.20.2"
 clap = { version = "4.5.26", features = ["derive"] }
 bincode = "1.3.3"
 sysinfo = { version = "0.33.1", default-features = false, features = ["disk"] }
-syslog = "7.0.0"
 log = "0.4.25"
