--- a/wallguard-server/libwallguard/Cargo.toml
+++ b/wallguard-server/libwallguard/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "wallguard-server"
-version = "0.2.3"
+name = "nullnet-libwallguard"
+version = "0.1.0"
 edition = "2021"
 authors = ["Giuliano Bellini <gyulyvgc99@gmail.com>", "Anton Liashkevich <anton.liashkevich.eng@gmail.com>"]
 description = "A centralized management system for network firewalls"
-readme = "README.md"
+readme = "../README.md"
 #homepage = ""
 repository = "https://github.com/NullNet-ai/wallguard-server"
 #documentation = ""
@@ -12,7 +12,6 @@ license = "MIT"
 keywords = ["firewall", "network", "manager", "centralized", "monitor"]
 categories = ["network-programming"]
 #include = []
-publish = false
 
 [profile.release]
 opt-level = 3
@@ -20,28 +19,11 @@ lto = true
 strip = true
 
 [dependencies]
-nullnet-libdatastore = "0.3.0"
-nullnet-libtoken = "0.1.1"
-nullnet-libfireparse = "0.2.3"
-nullnet-liberror = "0.1.1"
-nullnet-liblogging = "0.2.0"
-etherparse = "0.17.0"
 tonic = { version = "0.12.3", features = ["tls", "tls-roots"] }
 prost = "0.13.5"
-tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
-async-channel = "2.3.1"
+tokio = "1.43.0"
 serde = { version = "1.0.218", features = ["derive"] }
-serde_json = "1.0.139"
-once_cell = "1.20.3"
-chrono = "0.4.40"
-md5 = "0.7.0"
-futures = "0.3.31"
-axum = "0.8.1"
-if-addrs = "0.13.3"
 log = "0.4.26"
-
-[build-dependencies]
-tonic-build = "0.12.3"
 
 [badges]
 maintenance = { status = "actively-developed" }
