--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ strip = true
 nullnet-traffic-monitor = { version = "0.1.3", features = ["export-pcap"] }
 nullnet-libconfmon = "=0.2.5"
 nullnet-libtoken = "=0.1.1"
-nullnet-wallguard-server = "=0.2.3"
+nullnet-libwallguard = "0.1.0"
 nullnet-liblogging = "0.2.0"
 chrono = { version = "0.4.39", features = ["clock"] }
 tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
