--- a/wallguard-server/Cargo.toml
+++ b/wallguard-server/Cargo.toml
@@ -25,6 +25,7 @@ nullnet-libtoken = "0.1.1"
 nullnet-libfireparse = "0.3.0"
 nullnet-liberror = "0.1.1"
 nullnet-liblogging = "0.2.0"
+nullnet-libtunnel = "0.1.1"
 etherparse = "0.17.0"
 tonic = { version = "0.12.3", features = ["tls", "tls-roots"] }
 prost = "0.13.5"
