--- a/wallguard-server/Cargo.toml
+++ b/wallguard-server/Cargo.toml
@@ -29,16 +29,14 @@ etherparse = "0.17.0"
 tonic = { version = "0.12.3", features = ["tls", "tls-roots"] }
 prost = "0.13.5"
 tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
-async-channel = "2.3.1"
 serde = { version = "1.0.218", features = ["derive"] }
 serde_json = "1.0.139"
-once_cell = "1.20.3"
 chrono = "0.4.40"
 md5 = "0.7.0"
-futures = "0.3.31"
 axum = "0.8.1"
 if-addrs = "0.13.3"
 log = "0.4.26"
+clap = { version = "4.5.32", features = ["derive"] }
 
 [build-dependencies]
 tonic-build = "0.12.3"
