--- a/wallguard-server/Cargo.toml
+++ b/wallguard-server/Cargo.toml
@@ -25,6 +25,7 @@ nullnet-libtoken = "0.1.1"
 nullnet-libfireparse = "0.3.0"
 nullnet-liberror = "0.1.1"
 nullnet-liblogging = "0.2.0"
+nullnet-libipinfo = "0.2.0"
 etherparse = "0.17.0"
 tonic = { version = "0.12.3", features = ["tls", "tls-roots"] }
 prost = "0.13.5"
@@ -37,6 +38,8 @@ axum = "0.8.1"
 if-addrs = "0.13.3"
 log = "0.4.26"
 clap = { version = "4.5.32", features = ["derive"] }
+indexmap = "2.8.0"
+once_cell = "1.21.1"
 
 [build-dependencies]
 tonic-build = "0.12.3"
