--- a/wallguard-server/Cargo.toml
+++ b/wallguard-server/Cargo.toml
@@ -42,6 +42,9 @@ log = "0.4.26"
 actix-web = "4.10.2"
 uuid = { version = "1.15.1", features = [ "v4" ] } 
 actix-cors = "0.7.1"
+hyper = { version = "1.6.0", features = [ "client", "http1", "http2" ] }
+hyper-util = { version = "0.1.10", features = ["client", "client-legacy", "http1"] }
+http-body-util = "0.1.3"
 
 [build-dependencies]
 tonic-build = "0.12.3"
