--- a/wallguard-server/Cargo.toml
+++ b/wallguard-server/Cargo.toml
@@ -45,6 +45,10 @@ actix-cors = "0.7.1"
 hyper = { version = "1.6.0", features = [ "client", "http1", "http2" ] }
 hyper-util = { version = "0.1.10", features = ["client", "client-legacy", "http1"] }
 http-body-util = "0.1.3"
+actix-web-actors = "4.3.1"
+tokio-tungstenite = "0.26.2"
+actix = "0.13.5"
+futures-util = "0.3.31"
 
 [build-dependencies]
 tonic-build = "0.12.3"
