--- a/wallguard-server/Cargo.toml
+++ b/wallguard-server/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "wallguard-server"
 version = "0.2.3"
-edition = "2021"
+edition = "2024"
 authors = ["Giuliano Bellini <gyulyvgc99@gmail.com>", "Anton Liashkevich <anton.liashkevich.eng@gmail.com>"]
 description = "A centralized management system for network firewalls"
 readme = "README.md"
@@ -25,7 +25,7 @@ nullnet-libtoken = "0.1.1"
 nullnet-libfireparse = "0.3.1"
 nullnet-liberror = "0.1.1"
 nullnet-liblogging = "0.2.0"
-nullnet-libtunnel = "0.2.1"
+nullnet-libtunnel = "0.3.1"
 etherparse = "0.17.0"
 tonic = { version = "0.12.3", features = ["tls", "tls-roots"] }
 prost = "0.13.5"
@@ -49,6 +49,8 @@ actix-web-actors = "4.3.1"
 tokio-tungstenite = "0.26.2"
 actix = "0.13.5"
 futures-util = "0.3.31"
+rand = "0.9.0"
+hex = "0.4.3"
 
 [build-dependencies]
 tonic-build = "0.12.3"
