--- a/wallguard-server/Dockerfile
+++ b/wallguard-server/Dockerfile
@@ -7,7 +7,7 @@ RUN apt-get update && \
     apt-get clean && \ 
     rm -rf /var/lib/apt/lists/*
 
-COPY Cargo.toml Cargo.lock ./
+COPY Cargo.toml ./
 
 COPY . .
 
