--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ nullnet-libtoken = "0.2.0"
 nullnet-libwallguard = "0.1.1"
 nullnet-liblogging = "0.2.0"
 nullnet-liberror = "0.1.1"
+nullnet-libtunnel = "0.3.1"
 chrono = { version = "0.4.39", features = ["clock"] }
 tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
 uuid = { version = "1.12.0", features = ["v4"] }
@@ -32,4 +33,3 @@ actix = "0.13.5"
 actix-web = "4.10.2"
 actix-web-actors = "4.3.1"
 bytestring = "1.4.0"
-nullnet-libtunnel = { path = "../libguard/libtunnel" }
