--- a/wallguard-server/Cargo.toml
+++ b/wallguard-server/Cargo.toml
@@ -52,6 +52,9 @@ log = "0.4.26"
 clap = { version = "4.5.32", features = ["derive"] }
 indexmap = "2.8.0"
 once_cell = "1.21.1"
+tokio-rustls = "0.26.2"
+rustls = "0.23.25"
+webpki-roots = "0.26.8"
 
 [build-dependencies]
 tonic-build = "0.12.3"
