--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ strip = true
 nullnet-traffic-monitor = { version = "0.1.3", features = ["export-pcap"] }
 nullnet-libconfmon = "=0.2.5"
 nullnet-libtoken = "0.2.0"
-nullnet-libwallguard = "0.1.1"
+nullnet-libwallguard = { "path" = "../wallguard-server/libwallguard" }
 nullnet-liblogging = "0.2.0"
 nullnet-liberror = "0.1.1"
 nullnet-libtunnel = "0.3.2"
