update license fields

--- a/wallguard-server/libwallguard/Cargo.toml
+++ b/wallguard-server/libwallguard/Cargo.toml
@@ -8,7 +8,7 @@ readme = "../README.md"
 #homepage = ""
 repository = "https://github.com/NullNet-ai/wallguard-server"
 #documentation = ""
-license = "MIT"
+license = "AGPL-3.0-only"
 keywords = ["firewall", "network", "manager", "centralized", "monitor"]
 categories = ["network-programming"]
 #include = []
