--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ strip = true
 [dependencies]
 nullnet-traffic-monitor = { version = "0.1.3", features = ["export-pcap"] }
 nullnet-libconfmon = "=0.2.5"
-nullnet-libwallguard = "0.1.3"
+nullnet-libwallguard = "0.1.5"
 nullnet-liblogging = "0.3.0"
 nullnet-liberror = "0.1.1"
 nullnet-libtunnel = "0.3.2"
@@ -32,3 +32,4 @@ actix = "0.13.5"
 actix-web = "4.10.2"
 actix-web-actors = "4.3.1"
 bytestring = "1.4.0"
+dirs = "6.0.0"
