--- a/wallguard-server/Cargo.toml
+++ b/wallguard-server/Cargo.toml
@@ -22,7 +22,7 @@ strip = true
 [dependencies]
 nullnet-libdatastore = "0.4.4"
 nullnet-libtoken = "0.2.0"
-nullnet-libfireparse = "0.3.2"
+nullnet-libfireparse = "0.3.3"
 nullnet-liberror = "0.1.1"
 nullnet-liblogging = "0.3.0"
 nullnet-libipinfo = "0.2.0"
@@ -54,6 +54,8 @@ indexmap = "2.8.0"
 tokio-rustls = "0.26.2"
 rustls = "0.23.25"
 webpki-roots = "0.26.8"
+async-ssh2-lite = { version = "0.5.0", features = ["async-io", "tokio"] }
+
 
 [build-dependencies]
 tonic-build = "0.13.1"
