--- a/wallguard-server/Cargo.toml
+++ b/wallguard-server/Cargo.toml
@@ -36,7 +36,7 @@ serde_json = "1.0.139"
 chrono = "0.4.40"
 md5 = "0.7.0"
 futures = "0.3.31"
-actix-web = "4.10.2"
+actix-web = {version = "4.11.0", features = ["rustls-0_23"]}
 uuid = { version = "1.15.1", features = [ "v4" ] } 
 actix-cors = "0.7.1"
 hyper = { version = "1.6.0", features = [ "client", "http1", "http2" ] }
@@ -55,6 +55,7 @@ tokio-rustls = "0.26.2"
 rustls = "0.23.25"
 webpki-roots = "0.26.8"
 async-ssh2-lite = { version = "0.5.0", features = ["async-io", "tokio"] }
+rustls-pemfile = "2.2.0"
 
 
 [build-dependencies]
