--- a/wallguard-server/Cargo.toml
+++ b/wallguard-server/Cargo.toml
@@ -1,17 +1,19 @@
 [package]
 name = "wallguard-server"
-version = "0.2.3"
+version = "1.0.0"
 edition = "2024"
-authors = ["Giuliano Bellini <gyulyvgc99@gmail.com>", "Anton Liashkevich <anton.liashkevich.eng@gmail.com>"]
-description = "A centralized management system for network firewalls"
+authors = [
+    "Giuliano Bellini <gyulyvgc99@gmail.com>", 
+    "Anton Liashkevich <anton.liashkevich.eng@gmail.com>"
+]
+description = "A centralized management system for Nullnet agents"
 readme = "README.md"
 #homepage = ""
 repository = "https://github.com/NullNet-ai/wallguard-server"
 #documentation = ""
 license = "AGPL-3.0-only"
-keywords = ["firewall", "network", "manager", "centralized", "monitor"]
+keywords = ["firewall", "network", "manager", "centralized", "monitor", "agent"]
 categories = ["network-programming"]
-#include = []
 publish = false
 
 [profile.release]
@@ -27,36 +29,8 @@ nullnet-liberror = "0.1.1"
 nullnet-liblogging = "0.3.0"
 nullnet-libipinfo = "0.2.0"
 nullnet-libtunnel = "0.3.3"
-etherparse = "0.18.0"
-tonic = { version = "0.13.1", features = ["_tls-any", "tls-native-roots"] }
-prost = "0.13.5"
 tokio = { version = "1.45.0", features = ["rt-multi-thread"] }
-serde = { version = "1.0.218", features = ["derive"] }
-serde_json = "1.0.139"
-chrono = "0.4.40"
-md5 = "0.7.0"
-futures = "0.3.31"
-actix-web = {version = "4.11.0", features = ["rustls-0_23"]}
-uuid = { version = "1.15.1", features = [ "v4" ] } 
-actix-cors = "0.7.1"
-hyper = { version = "1.6.0", features = [ "client", "http1", "http2" ] }
-hyper-util = { version = "0.1.10", features = ["client", "client-legacy", "http1"] }
-http-body-util = "0.1.3"
-actix-web-actors = "4.3.1"
-tokio-tungstenite = { version = "0.26.2", features = ["handshake"] }
-actix = "0.13.5"
-futures-util = "0.3.31"
-rand = "0.9.0"
-hex = "0.4.3"
-log = "0.4.26"
-clap = { version = "4.5.32", features = ["derive"] }
-indexmap = "2.8.0"
-tokio-rustls = "0.26.2"
-rustls = "0.23.25"
-webpki-roots = "0.26.8"
-async-ssh2-lite = { version = "0.5.0", features = ["async-io", "tokio"] }
-rustls-pemfile = "2.2.0"
-
+tonic = { version = "0.13.1", features = ["_tls-any", "tls-native-roots"] }
 
 [build-dependencies]
 tonic-build = "0.13.1"
