--- a/wallguard-server/Cargo.toml
+++ b/wallguard-server/Cargo.toml
@@ -22,15 +22,12 @@ lto = true
 strip = true
 
 [dependencies]
-nullnet-libdatastore = "0.4.4"
-nullnet-libtoken = "0.2.0"
-nullnet-libfireparse = "0.3.3"
-nullnet-liberror = "0.1.1"
-nullnet-liblogging = "0.3.0"
-nullnet-libipinfo = "0.2.0"
-nullnet-libtunnel = "0.3.3"
 tokio = { version = "1.45.0", features = ["rt-multi-thread"] }
 tonic = { version = "0.13.1", features = ["_tls-any", "tls-native-roots"] }
+prost = "0.13.5"
+log = "0.4.27"
+nullnet-liberror = "0.1.1"
+
 
 [build-dependencies]
 tonic-build = "0.13.1"
