--- a/wallguard-server/Cargo.toml
+++ b/wallguard-server/Cargo.toml
@@ -30,6 +30,8 @@ prost = "0.13.5"
 log = "0.4.27"
 env_logger = "0.11.8"
 nullnet-libtoken = "0.2.0"
+rand = "0.9.1"
+sha2 = "0.10.9"
 
 
 [build-dependencies]
