--- a/wallguard-server/Cargo.toml
+++ b/wallguard-server/Cargo.toml
@@ -32,6 +32,11 @@ env_logger = "0.11.8"
 nullnet-libtoken = "0.2.0"
 rand = "0.9.1"
 sha2 = "0.10.9"
+actix-web = "4.11.0"
+actix-cors = "0.7.1"
+actix-ws = "0.3.0"
+serde = { version = "1.0.218", features = ["derive"] }
+serde_json = "1.0.140"
 
 
 [build-dependencies]
