--- a/wallguard-server/Cargo.toml
+++ b/wallguard-server/Cargo.toml
@@ -24,7 +24,7 @@ strip = true
 [dependencies]
 nullnet-liberror = "0.1.1"
 nullnet-libdatastore = "0.4.4"
-tokio = { version = "1.45.0", features = ["rt-multi-thread"] }
+tokio = { version = "1.45.0", features = ["full"] }
 tonic = { version = "0.13.1", features = ["_tls-any", "tls-native-roots"] }
 prost = "0.13.5"
 log = "0.4.27"
@@ -37,6 +37,7 @@ actix-cors = "0.7.1"
 actix-ws = "0.3.0"
 serde = { version = "1.0.218", features = ["derive"] }
 serde_json = "1.0.140"
+async-ssh2-lite = { version = "0.5.0", features = ["async-io", "tokio"] }
 
 
 [build-dependencies]
