--- a/wallguard-server/Cargo.toml
+++ b/wallguard-server/Cargo.toml
@@ -38,6 +38,7 @@ actix-ws = "0.3.0"
 serde = { version = "1.0.218", features = ["derive"] }
 serde_json = "1.0.140"
 async-ssh2-lite = { version = "0.5.0", features = ["async-io", "tokio"] }
+futures-util = "0.3.31"
 
 
 [build-dependencies]
