--- a/wallguard-server/Cargo.toml
+++ b/wallguard-server/Cargo.toml
@@ -39,6 +39,7 @@ serde = { version = "1.0.218", features = ["derive"] }
 serde_json = "1.0.140"
 async-ssh2-lite = { version = "0.5.0", features = ["async-io", "tokio"] }
 futures-util = "0.3.31"
+nullnet-libwallguard = { path = "libwallguard" }
 
 
 [build-dependencies]
