--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,10 +13,11 @@ lto = true
 strip = true
 
 [dependencies]
-nullnet-libwallguard = "0.1.5"
+nullnet-libwallguard = "1.0.1"
+nullnet-liberror = "0.1.1"
 tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
 clap = { version = "4.5.26", features = ["derive"] }
 dirs = "6.0.0"
 env_logger = "0.11.8"
 log = "0.4.27"
-nullnet-liberror = "0.1.1"
+sha2 = "0.10.9"
