--- a/wallguard-server/Cargo.toml
+++ b/wallguard-server/Cargo.toml
@@ -40,6 +40,12 @@ serde_json = "1.0.140"
 async-ssh2-lite = { version = "0.5.0", features = ["async-io", "tokio"] }
 futures-util = "0.3.31"
 nullnet-libwallguard = { path = "libwallguard" }
+rustls = "0.23.27"
+tokio-rustls = "0.26.2"
+webpki-roots = "1.0.0"
+hyper = { version = "1.6.0", features = [ "client", "http1", "http2" ] }
+hyper-util = { version = "0.1.10", features = ["client", "client-legacy", "http1"] }
+http-body-util = "0.1.3"
 
 
 [build-dependencies]
