--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,6 @@ chrono = { version = "0.4.39", features = ["clock"] }
 tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
 uuid = { version = "1.12.0", features = ["v4"] }
 clap = { version = "4.5.26", features = ["derive"] }
-bincode = "1.3.3"
 sysinfo = { version = "0.35.1", default-features = false, features = ["disk"] }
 log = "0.4.25"
 portable-pty = "0.9.0"
@@ -35,3 +34,4 @@ actix-web-actors = "4.3.1"
 bytestring = "1.4.0"
 dirs = "6.0.0"
 serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.140"
