--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,6 @@ env_logger = "0.11.8"
 log = "0.4.27"
 sha2 = "0.10.9"
 portable-pty = "0.9.0"
+smbios-lib = "0.9.2"
+libc = "0.2.172"
+sysinfo = "0.35.1"
