--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,6 @@ version = "0.1.3"
 edition = "2021"
 license = "AGPL-3.0-only"
 
-[features]
-no-cfg-monitor = []
-
 [profile.release]
 opt-level = 3
 lto = true
@@ -25,4 +22,6 @@ portable-pty = "0.9.0"
 smbios-lib = "0.9.2"
 libc = "0.2.172"
 sysinfo = "0.35.1"
+
+[target.'cfg(target_os = "linux")'.dependencies]
 libudev = "0.3.0"
