--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,4 @@ sha2 = "0.10.9"
 portable-pty = "0.9.0"
 smbios-lib = "0.9.2"
 libc = "0.2.172"
-sysinfo = "0.35.1"
-
-[target.'cfg(target_os = "linux")'.dependencies]
-libudev = "0.3.0"
+nix = { version = "0.30.1", features = ["user"] }
