--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,6 @@ version = "0.1.3"
 edition = "2021"
 license = "AGPL-3.0-only"
 
-[features]
-no-cfg-monitor = []
-
 [profile.release]
 opt-level = 3
 lto = true
@@ -22,3 +19,6 @@ env_logger = "0.11.8"
 log = "0.4.27"
 sha2 = "0.10.9"
 portable-pty = "0.9.0"
+smbios-lib = "0.9.2"
+libc = "0.2.172"
+nix = { version = "0.30.1", features = ["user"] }
