--- a/wallguard/Cargo.toml
+++ b/wallguard/Cargo.toml
@@ -12,7 +12,6 @@ strip = true
 [dependencies]
 nullnet-libwallguard = "1.0.2"
 nullnet-liberror = "0.1.1"
-tokio = { version = "1.43.0", features = ["full"] }
 clap = { version = "4.5.26", features = ["derive"] }
 dirs = "6.0.0"
 env_logger = "0.11.8"
@@ -22,3 +21,7 @@ portable-pty = "0.9.0"
 smbios-lib = "0.9.2"
 libc = "0.2.172"
 nix = { version = "0.30.1", features = ["user"] }
+prost.workspace = true
+tonic.workspace = true
+tokio.workspace = true
+
