--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,5 @@
 [workspace]
+resolver = "2"
 members = [
     "wallguard",
     "wallguard-cli"
@@ -8,3 +9,11 @@ members = [
 tokio = { version = "1.43.0", features = ["full"] }
 tonic = "0.13.1"
 prost = "0.13.5"
+
+[profile.release]
+opt-level = "z"
+lto = true
+codegen-units = 1
+
+[profile.dev]
+opt-level = 1
