--- a/wallguard-cli/Cargo.toml
+++ b/wallguard-cli/Cargo.toml
@@ -4,15 +4,12 @@ version = "0.1.0"
 edition = "2021"
 license = "AGPL-3.0-only"
 
-[profile.release]
-opt-level = 3
-lto = true
-strip = true
-
 [dependencies]
 prost.workspace = true
 tonic.workspace = true
 tokio.workspace = true
+clap = {version = "4.5.39", features = ["derive"]}
+anyhow = "1.0.98"
 
 [build-dependencies]
 tonic-build = "0.13.1"
