--- a/wallguard/Cargo.toml
+++ b/wallguard/Cargo.toml
@@ -19,6 +19,7 @@ nix = { version = "0.30.1", features = ["user"] }
 prost.workspace = true
 tonic.workspace = true
 tokio.workspace = true
+chrono = "0.4.41"
 
 
 [build-dependencies]
