--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,24 +1,19 @@
-[package]
-name = "wallguard"
-version = "0.1.3"
-edition = "2021"
-license = "AGPL-3.0-only"
+[workspace]
+resolver = "2"
+members = [
+    "wallguard",
+    "wallguard-cli"
+]
+
+[workspace.dependencies]
+tokio = { version = "1.43.0", features = ["full"] }
+tonic = "0.13.1"
+prost = "0.13.5"
 
 [profile.release]
-opt-level = 3
+opt-level = "z"
 lto = true
-strip = true
+codegen-units = 1
 
-[dependencies]
-nullnet-libwallguard = "1.0.2"
-nullnet-liberror = "0.1.1"
-tokio = { version = "1.43.0", features = ["full"] }
-clap = { version = "4.5.26", features = ["derive"] }
-dirs = "6.0.0"
-env_logger = "0.11.8"
-log = "0.4.27"
-sha2 = "0.10.9"
-portable-pty = "0.9.0"
-smbios-lib = "0.9.2"
-libc = "0.2.172"
-nix = { version = "0.30.1", features = ["user"] }
+[profile.dev]
+opt-level = 1
