--- a/wallguard/Cargo.toml
+++ b/wallguard/Cargo.toml
@@ -20,6 +20,9 @@ prost.workspace = true
 tonic.workspace = true
 tokio.workspace = true
 chrono = "0.4.41"
+once_cell = "1.21.3"
+serde = "1.0.219"
+serde_json = "1.0.140"
 
 
 [build-dependencies]
