Implement new connections authorization (#19)
* Added endpoint for authorization

* Pending Auths skeleton

* Create device on auth request

* Added mising method

* Impl authorization endpoint for portal

* Fixed credentials creation

* Code formatting

--- a/wallguard-server/libwallguard/Cargo.toml
+++ b/wallguard-server/libwallguard/Cargo.toml
@@ -27,6 +27,7 @@ prost = "0.13.5"
 tokio = "1.44.2"
 serde = { version = "1.0.219", features = ["derive"] }
 log = "0.4.27"
+nullnet-liberror = "0.1.1"
 
 [badges]
 maintenance = { status = "actively-developed" }
