--- a/wallguard/Cargo.toml
+++ b/wallguard/Cargo.toml
@@ -23,6 +23,10 @@ chrono = "0.4.41"
 once_cell = "1.21.3"
 serde = "1.0.219"
 serde_json = "1.0.140"
+nullnet-traffic-monitor = "0.1.5"
+sysinfo = { version = "0.35.2", default-features = false, features = ["disk"] }
+async-channel = "2.3.1"
+nullnet-libresmon = "0.1.2"
 
 
 [build-dependencies]
