--- a/wallguard-server/Cargo.toml
+++ b/wallguard-server/Cargo.toml
@@ -47,6 +47,9 @@ hyper-util = { version = "0.1.10", features = ["client", "client-legacy", "http1
 http-body-util = "0.1.3"
 argon2 = "0.5.3"
 chrono = "0.4.41"
+etherparse = "0.18.0"
+nullnet-libipinfo = "0.2.0"
+indexmap = "2.9.0"
 
 
 [build-dependencies]
