--- a/wallguard-server/Cargo.toml
+++ b/wallguard-server/Cargo.toml
@@ -29,7 +29,6 @@ tonic = { version = "0.13.1", features = ["_tls-any", "tls-native-roots"] }
 prost = "0.13.5"
 log = "0.4.27"
 env_logger = "0.11.8"
-nullnet-libtoken = "0.2.0"
 rand = "0.9.1"
 sha2 = "0.10.9"
 actix-web = "4.11.0"
@@ -52,6 +51,7 @@ nullnet-libipinfo = "0.2.0"
 indexmap = "2.9.0"
 nullnet-libfireparse = "0.3.3"
 md5 = "0.7.0"
+base64 = "0.22.1"
 
 
 [build-dependencies]
