--- a/wallguard/Cargo.toml
+++ b/wallguard/Cargo.toml
@@ -27,6 +27,9 @@ nullnet-traffic-monitor = "0.1.5"
 sysinfo = { version = "0.35.2", default-features = false, features = ["disk"] }
 async-channel = "2.3.1"
 nullnet-libresmon = "0.1.2"
+bincode = "1.3.3"
+get_if_addrs = "0.5.3"
+pnet = "0.35.0"
 
 
 [build-dependencies]
