--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,13 +2,17 @@
 resolver = "2"
 members = [
     "wallguard",
-    "wallguard-cli"
+    "wallguard-cli", "wallguard-common",
+    "wallguard-server"
 ]
 
 [workspace.dependencies]
 tokio = { version = "1.43.0", features = ["full"] }
-tonic = "0.13.1"
+tonic = { version = "0.13.1", features = ["_tls-any", "tls-native-roots"] }
 prost = "0.13.5"
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.140"
+nullnet-liberror = "0.1.1"
 
 [profile.release]
 opt-level = "z"
