--- a/wallguard-server/Cargo.toml
+++ b/wallguard-server/Cargo.toml
@@ -22,14 +22,11 @@ lto = true
 strip = true
 
 [dependencies]
-nullnet-liberror = "0.1.1"
+
 nullnet-libdatastore = "0.4.8"
 nullnet-libipinfo = "0.2.0"
 nullnet-libfireparse = "0.3.3"
 nullnet-libtoken = "0.3.3"
-tokio = { version = "1.45.0", features = ["full"] }
-tonic = { version = "0.13.1", features = ["_tls-any", "tls-native-roots"] }
-prost = "0.13.5"
 log = "0.4.27"
 env_logger = "0.11.8"
 rand = "0.9.1"
@@ -37,8 +34,7 @@ sha2 = "0.10.9"
 actix-web = "4.11.0"
 actix-cors = "0.7.1"
 actix-ws = "0.3.0"
-serde = { version = "1.0.218", features = ["derive"] }
-serde_json = "1.0.140"
+
 async-ssh2-lite = { version = "0.5.0", features = ["async-io", "tokio"] }
 futures-util = "0.3.31"
 rustls = "0.23.27"
@@ -52,6 +48,13 @@ etherparse = "0.18.0"
 indexmap = "2.9.0"
 md5 = "0.7.0"
 base64 = "0.22.1"
+wallguard-common = { path = "../wallguard-common", features = ["server"] }
+prost.workspace = true
+tonic.workspace = true
+tokio.workspace = true
+serde.workspace = true
+serde_json.workspace = true
+nullnet-liberror.workspace = true
 
 
 [build-dependencies]
