--- a/wallguard/Cargo.toml
+++ b/wallguard/Cargo.toml
@@ -5,8 +5,8 @@ edition = "2021"
 license = "AGPL-3.0-only"
 
 [dependencies]
-nullnet-libwallguard = { path="../../wallguard-server/libwallguard" }
-nullnet-liberror = "0.1.1"
+# nullnet-libwallguard = { path="../wallguard-server/libwallguard" }
+
 clap = { version = "4.5.26", features = ["derive"] }
 dirs = "6.0.0"
 env_logger = "0.11.8"
@@ -16,13 +16,8 @@ portable-pty = "0.9.0"
 smbios-lib = "0.9.2"
 libc = "0.2.172"
 nix = { version = "0.30.1", features = ["user"] }
-prost.workspace = true
-tonic.workspace = true
-tokio.workspace = true
 chrono = "0.4.41"
 once_cell = "1.21.3"
-serde = "1.0.219"
-serde_json = "1.0.140"
 nullnet-traffic-monitor = "0.1.5"
 sysinfo = { version = "0.35.2", default-features = false, features = ["disk"] }
 async-channel = "2.3.1"
@@ -30,7 +25,13 @@ nullnet-libresmon = "0.1.2"
 bincode = "1.3.3"
 get_if_addrs = "0.5.3"
 pnet = "0.35.0"
-
+wallguard-common = { path = "../wallguard-common", features = ["client"] }
+prost.workspace = true
+tonic.workspace = true
+tokio.workspace = true
+serde.workspace = true
+serde_json.workspace = true
+nullnet-liberror.workspace = true
 
 [build-dependencies]
 tonic-build = "0.13.1"
