--- a/wallguard-server/Cargo.toml
+++ b/wallguard-server/Cargo.toml
@@ -48,17 +48,13 @@ etherparse = "0.18.0"
 indexmap = "2.9.0"
 md5 = "0.7.0"
 base64 = "0.22.1"
-wallguard-common = { path = "../wallguard-common", features = ["server"] }
+wallguard-common = { path = "../wallguard-common" }
 prost.workspace = true
 tonic.workspace = true
 tokio.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 nullnet-liberror.workspace = true
-
-
-[build-dependencies]
-tonic-build = "0.13.1"
 
 [badges]
 maintenance = { status = "actively-developed" }
