--- a/wallguard-common/Cargo.toml
+++ b/wallguard-common/Cargo.toml
@@ -4,6 +4,10 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+bincode = "1.3.3"
+get_if_addrs = "0.5.3"
+pnet = "0.35.0"
+
 prost.workspace = true
 tonic.workspace = true
 tokio.workspace = true
