webrtc streaming impl
Fixed webRTC connection issue

Fixed video streaming

Fixed screenshot conversion to rgb

Relay data channel messages to the client

Removed unsued code

Added missing deps

Added missing deps

Removed RunServer

--- a/wallguard-server/Cargo.toml
+++ b/wallguard-server/Cargo.toml
@@ -49,6 +49,7 @@ serde_json.workspace = true
 nullnet-liberror.workspace = true
 
 russh = "0.54.3"
+webrtc = "0.14.0"
 
 [badges]
 maintenance = { status = "actively-developed" }
