Replaced `scrap` with `captis`

--- a/wallguard/Cargo.toml
+++ b/wallguard/Cargo.toml
@@ -33,7 +33,6 @@ xmltree = "0.11.0"
 md5 = "0.7.0"
 nftables = "0.6.3"
 enigo = "0.6.1"
-scap = "0.0.8"
-scrap = "0.5.0"
 copypasta = "0.10.2"
 openh264 = "0.9.0"
+captis = "0.6.1"
