--- a/wallguard/Cargo.toml
+++ b/wallguard/Cargo.toml
@@ -15,7 +15,6 @@ sha2 = "0.10.9"
 portable-pty = "0.9.0"
 smbios-lib = "0.9.2"
 libc = "0.2.172"
-nix = { version = "0.30.1", features = ["user"] }
 chrono = "0.4.41"
 once_cell = "1.21.3"
 nullnet-traffic-monitor = "0.1.5"
@@ -36,3 +35,9 @@ enigo = "0.6.1"
 copypasta = "0.10.2"
 openh264 = "0.9.0"
 captis = "0.6.1"
+
+[target.'cfg(windows)'.dependencies]
+is_elevated = "0.1.2"
+
+[target.'cfg(unix)'.dependencies]
+nix = { version = "0.30.1", features = ["user"] }
