--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,7 +57,7 @@ jobs:
       - name: Install dependencies
         run: |
           choco install -y protoc
-          choco install -y npcap
+
           Invoke-WebRequest -Uri "https://npcap.com/dist/npcap-sdk-1.13.zip" -OutFile "C:/npcap-sdk.zip"
           Expand-Archive -LiteralPath C:/npcap-sdk.zip -DestinationPath C:/npcap-sdk
           echo "LIB=C:/npcap-sdk/Lib/x64" >> $env:GITHUB_ENV
@@ -100,7 +100,7 @@ jobs:
       with:
         submodules: recursive
 
-    - name: Install dependencies ${{ matrix.platform.name }}
+    - name: Run CI ${{ matrix.platform.name }}
       uses: cross-platform-actions/action@v0.30.0
       with:
         operating_system: ${{ matrix.platform.os }}
@@ -109,58 +109,6 @@ jobs:
         cpu_count: 4
         memory: 4G
         environment_variables:
-        shutdown_vm: false
+        shutdown_vm: true
         sync_files: runner-to-vm
-        run: ${{ matrix.platform.install-cmd }}
-
-    - name: Check formatting
-      uses: cross-platform-actions/action@v0.30.0
-      with:
-        operating_system: ${{ matrix.platform.os }}
-        architecture: ${{ matrix.platform.arch }}
-        version: ${{ matrix.platform.os-version }}
-        cpu_count: 4
-        memory: 4G
-        environment_variables:
-        shutdown_vm: false
-        sync_files: false
-        run: cargo fmt --all -- --check
-
-    - name: Build workspace
-      uses: cross-platform-actions/action@v0.30.0
-      with:
-        operating_system: ${{ matrix.platform.os }}
-        architecture: ${{ matrix.platform.arch }}
-        version: ${{ matrix.platform.os-version }}
-        cpu_count: 4
-        memory: 4G
-        environment_variables:
-        shutdown_vm: false
-        sync_files: false
-        run: cargo build --verbose
-
-    - name: Lint
-      uses: cross-platform-actions/action@v0.30.0
-      with:
-        operating_system: ${{ matrix.platform.os }}
-        architecture: ${{ matrix.platform.arch }}
-        version: ${{ matrix.platform.os-version }}
-        cpu_count: 4
-        memory: 4G
-        environment_variables:
-        shutdown_vm: false
-        sync_files: false
-        run: cargo clippy -- -D warnings
-
-    - name: Test
-      uses: cross-platform-actions/action@v0.30.0
-      with:
-        operating_system: ${{ matrix.platform.os }}
-        architecture: ${{ matrix.platform.arch }}
-        version: ${{ matrix.platform.os-version }}
-        cpu_count: 4
-        memory: 4G
-        environment_variables:
-        shutdown_vm: false
-        sync_files: false
-        run: cargo test -- --nocapture
+        run: ${{ matrix.platform.install-cmd }} && cargo fmt --all -- --check && cargo build --verbose && cargo clippy -- -D warnings && cargo test -- --nocapture
